2005-05-25	Istvan Varga	<istvan@csounds.com>
	* Engine/insert.c: fixed bug in ihold opcode
	* Engine/rdorch.c: attempts at fixing else and endif bugs

2005-05-24 Victor Lazzarini <victor.lazzarini@nuim.ie>
         *changes to rtcoreaudio.c to enable channel independence

2005-05-23 Victor Lazzarini <victor.lazzarini@nuim.ie>
        * late entry to the log: added InOut/rtcoreaudio.c
        * late entry to the log: added Opcodes/sndloop.c (sndloop, flooper, pvsarp, pvsvoc)
        * late entry to the log: fixed globals in rtpa.c
        * late entry to the log: added full-duplex support to the portaudio module 
	 (rtpa.c pa_blocking.c), aimed primarily at coreaudio        

2005-05-23  Steven Yi  <stevenyi@gmail.com>

	* Engine/rdorch.c (splitline): Ported over ithen check from Csound4 source,
	added ithen to IFLABEL struct accordingly


2005-05-17  John ffitch  <jpff@codemist.co.uk>

	* Engine/swrite.c (swrite): Charge to expand "s #" and "e #" to
	"f0 #\ns"

2005-05-16  Anthony Kozar  <anthonykozar@sbcglobal.net>

	* Top/argdecode.c:
	* Top/csound.c:
	* Top/main.c:
	* Engine/filopen.c:
	* Engine/insert.c:
	* Engine/linevent.c:
	* Engine/musmon.c:  Converted mills_macintosh to mac_classic or MAC as
	  appropriate or removed code if dependent on Mills globals.

2005-05-15  Anthony Kozar  <anthonykozar@sbcglobal.net>

	* Top/getstring.c: #include "cs.h", not <cs.h>
	* Top/threads.c: Added stubs for csound*ThreadLock functions.
	* Engine/envvar.c: Fixes for MacOS pathnames (more may be needed).

2005-05-15  John ffitch  <jpff@codemist.co.uk>

	* Top/main.c: Prototype for mytmpnam

2005-05-14  John ffitch  <jpff@codemist.co.uk>

	* Top/argdecode.c (decode_long): Allow definition of macros

	* Engine/sread.c (init_smacros):
	* Engine/rdorch.c (init_omacros): New functions to define macros

2005-05-11  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/ugmoss.c (valpass): Added cache of p->maxlpt to avoid
	overwriting arguments
